--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-    <meta name="description" content="Jasa Joki Mobile Legends: Bang Bang, Cepat dan Murah.">
+    <meta name="description" content="Jasa Joki Mobile Legends: Bang Bang, Rank, Classic Cepat dan Murah.">
     <meta name="author" content="Jasa Joki Game Dari Gusti Umaro Ridho Illahi." />
     <meta http-equiv="refresh">
     <title>Joki Win</title>
     <!-- Favicon-->
     <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
     <!-- Font Awesome icons (free version)-->
-    <script src="https://use.fontawesome.com/releases/v5.15.3/js/all.js" crossorigin="anonymous"></script>
+    <!-- <script src="https://use.fontawesome.com/releases/v5.15.3/js/all.js" crossorigin="anonymous"></script> -->
     <!-- Google fonts-->
     <!-- <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css" /> -->
     <!-- <link href="https://fonts.googleapis.com/css?family=Lato:400,700,400italic,700italic" rel="stylesheet"
@@ -55,14 +55,14 @@
             <h1 class="masthead-heading mb-0">JASA JOKI GAME</h1>
             <!-- Icon Divider-->
             <div class="divider-custom divider-light">
-
-                <div class="divider-custom-icon"><i class="fas fa-star"></i><i class="fas fa-star"></i><i
-                        class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i>
-                </div>
-
+                <i class="star"></i>
+                <i class="star"></i>
+                <i class="star"></i>
+                <i class="star"></i>
+                <i class="star"></i>
             </div>
             <!-- Masthead Subheading-->
-            <p class="masthead-subheading font-weight-light mb-0">Mobile Legends (ML) - Arena Of Valor (AOV) - League Of
+            <p class="masthead-subheading font-weight-light mb-0">Mobile Legends (ML) | Arena Of Valor (AOV) | League Of
                 Legends (Wild Rift)</p>
         </div>
     </header>
@@ -110,8 +110,7 @@
                         <div id="panelsStayOpen-collapseTwo" class="accordion-collapse collapse"
                             aria-labelledby="panelsStayOpen-headingTwo">
                             <div class="accordion-body">
-                                <strong>Jasa joki dari Elite ke Master = Rp. 30.000 (12 <i
-                                        class="fas fa-star"></i>)</strong>
+                                <strong>Jasa joki dari Elite ke Master = Rp. 30.000 (12<i class="stars"></i>)</strong>
                                 | Waktu proses 4 jam - 1 hari.
                             </div>
                         </div>
@@ -127,8 +126,8 @@
                         <div id="panelsStayOpen-collapseThree" class="accordion-collapse collapse"
                             aria-labelledby="panelsStayOpen-headingThree">
                             <div class="accordion-body">
-                                <strong>Jasa joki dari Master ke Grand Master = Rp. 60.000 (16 <i
-                                        class="fas fa-star"></i>)</strong>
+                                <strong>Jasa joki dari Master ke Grand Master = Rp. 60.000 (16<i
+                                        class="stars"></i>)</strong>
                                 | Waktu proses 5 Jam - 1 hari.
                             </div>
                         </div>
@@ -145,8 +144,8 @@
                         <div id="panelsStayOpen-collapseFour" class="accordion-collapse collapse"
                             aria-labelledby="panelsStayOpen-headingFour">
                             <div class="accordion-body">
-                                <strong>Jasa joki dari Grand Master ke Epic = Rp. 145.000 (25 <i
-                                        class="fas fa-star"></i>)</strong>
+                                <strong>Jasa joki dari Grand Master ke Epic = Rp. 145.000 (25<i
+                                        class="stars"></i>)</strong>
                                 | Waktu proses 1 hari.
                             </div>
                         </div>
@@ -162,8 +161,7 @@
                         <div id="panelsStayOpen-collapseFive" class="accordion-collapse collapse"
                             aria-labelledby="panelsStayOpen-headingFive">
                             <div class="accordion-body">
-                                <strong>Jasa joki dari Epic ke Legend = Rp. 195.000 (25 <i
-                                        class="fas fa-star"></i>)</strong>
+                                <strong>Jasa joki dari Epic ke Legend = Rp. 195.000 (25<i class="stars"></i>)</strong>
                                 | Waktu proses 1 hari.
                             </div>
                         </div>
@@ -179,8 +177,7 @@
                         <div id="panelsStayOpen-collapseSix" class="accordion-collapse collapse"
                             aria-labelledby="panelsStayOpen-headingSix">
                             <div class="accordion-body">
-                                <strong>Jasa joki dari Legend ke Mythic = Rp. 245.000 (25 <i
-                                        class="fas fa-star"></i>)</strong>
+                                <strong>Jasa joki dari Legend ke Mythic = Rp. 245.000 (25<i class="stars"></i>)</strong>
                                 | Waktu proses 1 hari.
                             </div>
                         </div>
@@ -250,8 +247,8 @@
 
                     <div class="accordion-item mt-2">
                         <h2 class="accordion-header" id="panelsStayOpen-headingNine">
-                            <button class="accordion-button" type="button" data-bs-toggle="collapse"
-                                data-bs-target="#panelsStayOpen-collapseNine" aria-expanded="true"
+                            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                                data-bs-target="#panelsStayOpen-collapseNine" aria-expanded="false"
                                 aria-controls="panelsStayOpen-collapseNine">
                                 1. <img src="assets/img/Warrior.png" width="50px" alt="Logo Warrior"> Warrior = Rp. 1000
                             </button>
@@ -563,7 +560,7 @@
                                 <div class="fw-bolder">Berhasil</div>
                                 Untuk mengaktifkan form ini, daftar terlebih dahulu.
                                 <br />
-                                <a href=""></a>
+                                <a href="#"></a>
                             </div>
                         </div>
                         <!-- Submit error message-->
@@ -596,16 +593,12 @@
                 <!-- Footer Social Icons-->
                 <div class="col-lg-4 mb-5 mb-lg-0">
                     <h4 class="mb-4">SOSIAL MEDIA</h4>
-                    <a class="btn btn-outline-light btn-social mx-1" href="#"><i
-                            class="fab fa-fw fa-facebook-f"></i></a>
-                    <a class="btn btn-outline-light btn-social mx-1" href="#"><i class="fab fa-fw fa-twitter"></i></a>
-                    <a class="btn btn-outline-light btn-social mx-1" href="#"><i
-                            class="fab fa-fw fa-linkedin-in"></i></a>
-                    <a class="btn btn-outline-light btn-social mx-1" href="#"><i class="fab fa-fw fa-dribbble"></i></a>
+                    <h5 class="mb-4">SEGERA..</h5>
                 </div>
                 <!-- Footer kenapa Text-->
                 <div class="col-lg-4">
-                    <h4 class="mb-4">SEGERA..</h4>
+                    <h4 class="mb-4">TOKO</h4>
+                    <h5 class="mb-4">SEGERA..</h5>
                     <!-- <p class="lead mb-0">
                         ya.
                     </p> -->
