--- a/index.html
+++ b/index.html
@@ -215,22 +215,21 @@
                             <div class="accordion-body">
                                 <strong>Jasa joki Mythical Glory bisa <a
                                         href="https://api.whatsapp.com/send?phone=6285770634144&text=Mau%20Joki%20Dong"
-                                        target="_blank">Kontak
+                                        target="_blank" rel="noopener">Kontak
                                         kami</a> terlebih dahulu</strong>
                                 | Waktu proses 1 hari/tergantung mau berapa match.
                             </div>
                         </div>
                     </div>
                     <ul class="mt-2">
-                        <li><strong>Legend kebawah dihitung Per-Bintang (<i class="fas fa-star"></i>)</strong></li>
+                        <li><strong>Legend kebawah dihitung Per-Bintang <i class="stars"></i></strong></li>
                         <li>Jika beruntung random bonus savage atau maniac
                         </li>
                         <li>Keuntungan membeli paket mendapat potongan harga dari jumlah Per-Tier.</li>
                     </ul>
                     <div class="text-center mt-5">
                         <a href="https://api.whatsapp.com/send?phone=6285770634144&text=Mau%20Joki%20Dong"
-                            target="_blank" class="btn btn-xl btn-primary">
-                            <i class=" fab fa-whatsapp"></i>
+                            target="_blank" rel="noopener" class="btn btn-xl btn-primary">
                             JOKI SEKARANG
                         </a>
                     </div>
@@ -380,9 +379,7 @@
                         </div>
                     </div> -->
                     <ul class="mt-2">
-                        <li><strong>Legend keatas sudah tidak ada jaminan 100% menang karena sistem moonton melarang
-                                melawan bot
-                                pada tier tersebut</strong></li>
+                        <li><strong>Rank Legend keatas sudah tidak ada jaminan 100% menang</strong></li>
                         <li>Bisa nego, chat admin.</li>
                         <li>Jika beruntung random bonus savage atau maniac
                         </li>
@@ -390,8 +387,7 @@
                     </ul>
                     <div class="text-center mt-5">
                         <a href="https://api.whatsapp.com/send?phone=6285770634144&text=Mau%20Joki%20Dong"
-                            target="_blank" class="btn btn-xl btn-primary">
-                            <i class=" fab fa-whatsapp"></i>
+                            target="_blank" rel="noopener" class="btn btn-xl btn-primary">
                             JOKI SEKARANG
                         </a>
                     </div>
@@ -415,8 +411,9 @@
                 <div class="col-md-6 col-lg-4 mb-5">
                     <div class="jualakun-item mx-auto" data-bs-toggle="modal" data-bs-target="#jualakunModal1">
                         <div class="jualakun-item-caption d-flex align-items-center justify-content-center h-100 w-100">
-                            <div class="jualakun-item-caption-content text-center text-white"><i
-                                    class="fas fa-plus fa-3x"></i></div>
+                            <div class="jualakun-item-caption-content text-center text-white"><img
+                                    src="assets/img/logo-mobile-legend-31251-300x173.png" alt="Logo Mobile Legends">
+                            </div>
                         </div>
                         <img class="img-fluid" src="assets/img/undraw_empty_cart_co35.svg" alt="..." />
                     </div>
@@ -425,8 +422,9 @@
                 <div class="col-md-6 col-lg-4 mb-5">
                     <div class="jualakun-item mx-auto" data-bs-toggle="modal" data-bs-target="#jualakunModal2">
                         <div class="jualakun-item-caption d-flex align-items-center justify-content-center h-100 w-100">
-                            <div class="jualakun-item-caption-content text-center text-white"><i
-                                    class="fas fa-plus fa-3x"></i></div>
+                            <div class="jualakun-item-caption-content text-center text-white"><img
+                                    src="assets/img/logo-mobile-legend-31251-300x173.png" alt="Logo Mobile Legends">
+                            </div>
                         </div>
                         <img class="img-fluid" src="assets/img/undraw_empty_cart_co35.svg" alt="..." />
                     </div>
@@ -435,8 +433,9 @@
                 <div class="col-md-6 col-lg-4 mb-5">
                     <div class="jualakun-item mx-auto" data-bs-toggle="modal" data-bs-target="#jualakunModal3">
                         <div class="jualakun-item-caption d-flex align-items-center justify-content-center h-100 w-100">
-                            <div class="jualakun-item-caption-content text-center text-white"><i
-                                    class="fas fa-plus fa-3x"></i></div>
+                            <div class="jualakun-item-caption-content text-center text-white"><img
+                                    src="assets/img/logo-mobile-legend-31251-300x173.png" alt="Logo Mobile Legends">
+                            </div>
                         </div>
                         <img class="img-fluid" src="assets/img/undraw_empty_cart_co35.svg" alt="..." />
                     </div>
@@ -445,8 +444,9 @@
                 <div class="col-md-6 col-lg-4 mb-5 mb-lg-0">
                     <div class="jualakun-item mx-auto" data-bs-toggle="modal" data-bs-target="#jualakunModal4">
                         <div class="jualakun-item-caption d-flex align-items-center justify-content-center h-100 w-100">
-                            <div class="jualakun-item-caption-content text-center text-white"><i
-                                    class="fas fa-plus fa-3x"></i></div>
+                            <div class="jualakun-item-caption-content text-center text-white"><img
+                                    src="assets/img/logo-mobile-legend-31251-300x173.png" alt="Logo Mobile Legends">
+                            </div>
                         </div>
                         <img class="img-fluid" src="assets/img/undraw_empty_cart_co35.svg" alt="..." />
                     </div>
@@ -455,8 +455,9 @@
                 <div class="col-md-6 col-lg-4 mb-5 mb-md-0">
                     <div class="jualakun-item mx-auto" data-bs-toggle="modal" data-bs-target="#jualakunModal5">
                         <div class="jualakun-item-caption d-flex align-items-center justify-content-center h-100 w-100">
-                            <div class="jualakun-item-caption-content text-center text-white"><i
-                                    class="fas fa-plus fa-3x"></i></div>
+                            <div class="jualakun-item-caption-content text-center text-white"><img
+                                    src="assets/img/logo-mobile-legend-31251-300x173.png" alt="Logo Mobile Legends">
+                            </div>
                         </div>
                         <img class="img-fluid" src="assets/img/undraw_empty_cart_co35.svg" alt="..." />
                     </div>
@@ -465,8 +466,9 @@
                 <div class="col-md-6 col-lg-4">
                     <div class="jualakun-item mx-auto" data-bs-toggle="modal" data-bs-target="#jualakunModal6">
                         <div class="jualakun-item-caption d-flex align-items-center justify-content-center h-100 w-100">
-                            <div class="jualakun-item-caption-content text-center text-white"><i
-                                    class="fas fa-plus fa-3x"></i></div>
+                            <div class="jualakun-item-caption-content text-center text-white"><img
+                                    src="assets/img/logo-mobile-legend-31251-300x173.png" alt="Logo Mobile Legends">
+                            </div>
                         </div>
                         <img class="img-fluid" src="assets/img/undraw_empty_cart_co35.svg" alt="..." />
                     </div>
@@ -498,8 +500,7 @@
             <!-- kenapa Section Button-->
             <div class="text-center mt-4">
                 <a href="https://api.whatsapp.com/send?phone=6285770634144&text=Mau%20Joki%20Dong" target="_blank"
-                    class="btn btn-xl btn-outline-light">
-                    <i class=" fab fa-whatsapp"></i>
+                    rel="noopener" class="btn btn-xl btn-outline-light">
                     JOKI SEKARANG
                 </a>
             </div>
