--- a/index.html
+++ b/index.html
@@ -655,7 +655,7 @@
                 <!-- Footer Social Icons-->
                 <div class="col-lg-4 mb-5 mb-lg-0">
                     <h4 class="mb-4">SOSIAL MEDIA</h4>
-                    <img src="logo-ig.png" alt="Instagram" width="30"> <a href="https://www.instagram.com/joki.win/"
+                    <img src="assets/img/logo-ig.png" alt="Instagram" width="30"> <a href="https://www.instagram.com/joki.win/"
                         target="_blank" rel="noopener" style="color:white;">@joki.win</a>
                 </div>
                 <!-- Footer kenapa Text-->
