--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
     <meta charset="utf-8" />
+    <meta name="google-site-verification" content="Wr5w8AK3DpPgy-6RY5KRYu_xbEMrY27-6OFb1kBdXyI" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
     <meta name="description"
         content="Jasa Joki Mobile Legends: Bang Bang, Rank, Classic Cepat dan Murah. Menawarkan solusi terbaik untuk kamu yang ingin menaikan Rank, MMR atau Win Rate Hero di akun Mobile Legends kamu. Kami menyediakan Jasa Joki dengan harga murah, mudah, cepat dan terpercaya tentunya.">
