--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         content="Jasa Joki Mobile Legends: Bang Bang, Rank, Classic Cepat dan Murah. Menawarkan solusi terbaik untuk kamu yang ingin menaikan Rank, MMR atau Win Rate Hero di akun Mobile Legends kamu. Kami menyediakan Jasa Joki dengan harga murah, mudah, cepat dan terpercaya tentunya.">
     <meta name="author" content="Jasa Joki Game Dari Gusti Umaro Ridho Illahi." />
     <meta http-equiv="refresh">
-    <title>Joki Win</title>
+    <title>Joki Win Jasa Joki Game Mobile Legends ML</title>
     <!-- Favicon-->
     <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
     <!-- Font Awesome icons (free version)-->
@@ -231,6 +231,9 @@
                     </div>
                     <ul class="m-2">
                         <li><strong>Legend kebawah dihitung Per-Bintang <i class="stars"></i></strong></li>
+                        <li><strong>Minimal order 5 bintang/5 match</i></strong></li>
+                        <li>Bebas request hero favorit, MMR hero auto naik</li>
+                        <li>WR dan Battle Point auto naik</li>
                         <li>Jika beruntung random bonus savage atau maniac
                         </li>
                         <li>Keuntungan membeli paket mendapat potongan harga dari jumlah Per-Tier.</li>
@@ -388,6 +391,8 @@
                     </div> -->
                     <ul class="m-2">
                         <li><strong>Rank Legend keatas sudah tidak ada jaminan 100% menang</strong></li>
+                        <li><strong>Semakin banyak order, bonus kemenangan akan ditambahkan</strong></li>
+                        <li><strong>Minimal order 5 match</strong></li>
                         <li>Bisa nego, chat admin.</li>
                         <li>Jika beruntung random bonus savage atau maniac
                         </li>
@@ -425,9 +430,9 @@
                             </p>
                             <ul>
                                 <li>Pastikan kamu sudah Bind/kaitkan akun kamu menggunakan Moonton Account, Facebook,
-                                    Google Play Games atau VK.</li>
+                                    Google Play Games atau VK</li>
                                 <li>Memberikan informasi akun untuk login seperti ID dan Password: Moonton Account,
-                                    Facebook, Google Play Games atau VK (Pilih salah satu).</li>
+                                    Facebook, Google Play Games atau VK (Pilih salah satu)</li>
                                 <li>Pembayaran penuh dilakukan di awal atau sebelum proses (Tidak terima DP/Cicilan).
                             </ul>
                             <!-- <a href="#" class="btn btn-primary">Go somewhere</a> -->
@@ -440,7 +445,7 @@
                                 pembayaran chat <a
                                     href="https://api.whatsapp.com/send?phone=6285770634144&text=Mau%20Joki%20Dong"
                                     target="_blank" rel="noopener">
-                                    Admin</a>
+                                    Admin.</a>
                             </p>
                             <ul>
                                 <li>Bank Central Asia (BCA)</li>
@@ -656,7 +661,7 @@
                 <!-- Footer Social Icons-->
                 <div class="col-lg-4 mb-5 mb-lg-0">
                     <h4 class="mb-4">SOSIAL MEDIA</h4>
-                    <img src="assets/img/logo-ig.png" alt="Instagram" width="30"> <a href="https://www.instagram.com/joki.win/"
+                    <img src="logo-ig.png" alt="Instagram" width="30"> <a href="https://www.instagram.com/joki.win/"
                         target="_blank" rel="noopener" style="color:white;">@joki.win</a>
                 </div>
                 <!-- Footer kenapa Text-->
@@ -886,6 +891,9 @@
     </script>
 
     <!-- <script src="https://cdn.startbootstrap.com/sb-forms-latest.js"></script> -->
+    <!-- untuk iklan website kita yang mengarah ke kita Go to www.addthis.com/dashboard to customize your tools -->
+    <!-- <script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-6138ce273e4e1513"></script> -->
+
 </body>
 
 </html>
