--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
                                 data-bs-target="#panelsStayOpen-collapseEight" aria-expanded="false"
                                 aria-controls="panelsStayOpen-collapseEight">
                                 8. <img src="assets/img/Mythical_Glory.png" width="50px" alt="Logo Mythical Glory">
-                                Mythical Glory ?
+                                Mythical Glory = ?
                             </button>
                         </h2>
                         <div id="panelsStayOpen-collapseEight" class="accordion-collapse collapse"
@@ -226,6 +226,24 @@
                                         target="_blank" rel="noopener">Kontak
                                         kami</a> terlebih dahulu</strong>
                                 | Waktu proses 1 hari/tergantung mau berapa match.
+                            </div>
+                        </div>
+                    </div>
+                    <div class="accordion-item">
+                        <h2 class="accordion-header" id="panelsStayOpen-headingNine">
+                            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                                data-bs-target="#panelsStayOpen-collapseNine" aria-expanded="false"
+                                aria-controls="panelsStayOpen-collapseNine">
+                                9. <img src="assets/img/logo-mcl-kecil.png" alt="Logo MCL">
+                                Joki MCL = Rp. 195.000
+                            </button>
+                        </h2>
+                        <div id="panelsStayOpen-collapseNine" class="accordion-collapse collapse"
+                            aria-labelledby="panelsStayOpen-headingNine">
+                            <div class="accordion-body">
+                                <strong>Jasa joki MCL (Jika kalah uang dikembalikan 100% atau lanjut MCL minggu
+                                    depan) cocok untuk yang menginginkan squad mendapat title juara MCL</strong>
+                                | Waktu proses 1 Jam.
                             </div>
                         </div>
                     </div>
@@ -661,8 +679,9 @@
                 <!-- Footer Social Icons-->
                 <div class="col-lg-4 mb-5 mb-lg-0">
                     <h4 class="mb-4">SOSIAL MEDIA</h4>
-                    <img src="logo-ig.png" alt="Instagram" width="30"> <a href="https://www.instagram.com/joki.win/"
-                        target="_blank" rel="noopener" style="color:white;">@joki.win</a>
+                    <img src="assets/img/logo-ig.png" alt="Instagram" width="30"> <a
+                        href="https://www.instagram.com/joki.win/" target="_blank" rel="noopener"
+                        style="color:white;">@joki.win</a>
                 </div>
                 <!-- Footer kenapa Text-->
                 <div class="col-lg-4">
