--- a/index.html
+++ b/index.html
@@ -89,14 +89,15 @@
                 <h2 class="text-center"><img src="assets/img/logo-mobile-legend-31251-300x173.png" width="170px"
                         alt="Logo Mobile Legends" />
                 </h2>
-                <div class="accordion" id="accordionPanelsStayOpenExample">
+                <div class="accordion" id="accordionPanelsStayOpenOne">
                     <h2 class="text-center mb-4">Joki Rank</h2>
                     <div class="accordion-item">
                         <h2 class="accordion-header" id="panelsStayOpen-headingOne">
                             <button class="accordion-button" type="button" data-bs-toggle="collapse"
                                 data-bs-target="#panelsStayOpen-collapseOne" aria-expanded="true"
                                 aria-controls="panelsStayOpen-collapseOne">
-                                1. <img src="assets/img/Warrior.png" width="50px" alt="Logo Warrior"> Warrior = Rp. 1500
+                                1. <img src="assets/img/warrior-50px.png" width="50px" alt="Logo Warrior"> Warrior = Rp.
+                                1500
                             </button>
                         </h2>
                         <div id="panelsStayOpen-collapseOne" class="accordion-collapse collapse show"
@@ -112,7 +113,7 @@
                             <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
                                 data-bs-target="#panelsStayOpen-collapseTwo" aria-expanded="false"
                                 aria-controls="panelsStayOpen-collapseTwo">
-                                2. <img src="assets/img/Elite.png" width="50px" alt="Logo Elite"> Elite = Rp. 3000
+                                2. <img src="assets/img/elite-50px.png" width="50px" alt="Logo Elite"> Elite = Rp. 3000
                             </button>
                         </h2>
                         <div id="panelsStayOpen-collapseTwo" class="accordion-collapse collapse"
@@ -128,7 +129,8 @@
                             <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
                                 data-bs-target="#panelsStayOpen-collapseThree" aria-expanded="false"
                                 aria-controls="panelsStayOpen-collapseThree">
-                                3. <img src="assets/img/Master.png" width="50px" alt="Logo Master"> Master = Rp. 4000
+                                3. <img src="assets/img/master-50px.png" width="50px" alt="Logo Master"> Master = Rp.
+                                4000
                             </button>
                         </h2>
                         <div id="panelsStayOpen-collapseThree" class="accordion-collapse collapse"
@@ -145,7 +147,8 @@
                             <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
                                 data-bs-target="#panelsStayOpen-collapseFour" aria-expanded="false"
                                 aria-controls="panelsStayOpen-collapseFour">
-                                4. <img src="assets/img/Grandmaster.png" width="50px" alt="Logo Grand Master"> Grand
+                                4. <img src="assets/img/grandmaster-50px.png" width="50px" alt="Logo Grand Master">
+                                Grand
                                 Master = Rp. 6000
                             </button>
                         </h2>
@@ -163,7 +166,7 @@
                             <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
                                 data-bs-target="#panelsStayOpen-collapseFive" aria-expanded="false"
                                 aria-controls="panelsStayOpen-collapseFive">
-                                5. <img src="assets/img/Epic.png" width="50px" alt="Logo Epic"> Epic = Rp. 8000
+                                5. <img src="assets/img/epic-50px.png" width="50px" alt="Logo Epic"> Epic = Rp. 8000
                             </button>
                         </h2>
                         <div id="panelsStayOpen-collapseFive" class="accordion-collapse collapse"
@@ -179,7 +182,8 @@
                             <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
                                 data-bs-target="#panelsStayOpen-collapseSix" aria-expanded="false"
                                 aria-controls="panelsStayOpen-collapseSix">
-                                6. <img src="assets/img/Legend.png" width="50px" alt="Logo Legend"> Legend = Rp. 10.000
+                                6. <img src="assets/img/legend-50px.png" width="50px" alt="Logo Legend"> Legend = Rp.
+                                10.000
                             </button>
                         </h2>
                         <div id="panelsStayOpen-collapseSix" class="accordion-collapse collapse"
@@ -195,7 +199,7 @@
                             <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
                                 data-bs-target="#panelsStayOpen-collapseSeven" aria-expanded="false"
                                 aria-controls="panelsStayOpen-collapseSeven">
-                                7. <img src="assets/img/Mythic.png" width="50px" alt="Logo Mythic"> Mythic = Rp.
+                                7. <img src="assets/img/mythic-50px.png" width="50px" alt="Logo Mythic"> Mythic = Rp.
                                 20.000/10point
                             </button>
                         </h2>
@@ -214,7 +218,7 @@
                             <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
                                 data-bs-target="#panelsStayOpen-collapseEight" aria-expanded="false"
                                 aria-controls="panelsStayOpen-collapseEight">
-                                8. <img src="assets/img/Mythical_Glory.png" width="50px" alt="Logo Mythical Glory">
+                                8. <img src="assets/img/mythicalglory-50px.png" width="50px" alt="Logo Mythical Glory">
                                 Mythical Glory = ?
                             </button>
                         </h2>
@@ -230,16 +234,15 @@
                         </div>
                     </div>
                     <div class="accordion-item">
-                        <h2 class="accordion-header" id="panelsStayOpen-headingNine">
+                        <h2 class="accordion-header" id="panelsStayOpen-headingZero">
                             <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-                                data-bs-target="#panelsStayOpen-collapseNine" aria-expanded="false"
-                                aria-controls="panelsStayOpen-collapseNine">
-                                9. <img src="assets/img/logo-mcl-kecil.png" alt="Logo MCL">
-                                Joki MCL = Rp. 195.000
+                                data-bs-target="#panelsStayOpen-collapseZero" aria-expanded="false"
+                                aria-controls="panelsStayOpen-collapseZero">
+                                9. <img src="assets/img/mcl-50px.png" alt="Logo MCL"> Joki MCL = Rp. 195.000
                             </button>
                         </h2>
-                        <div id="panelsStayOpen-collapseNine" class="accordion-collapse collapse"
-                            aria-labelledby="panelsStayOpen-headingNine">
+                        <div id="panelsStayOpen-collapseZero" class="accordion-collapse collapse"
+                            aria-labelledby="panelsStayOpen-headingZero">
                             <div class="accordion-body">
                                 <strong>Jasa joki MCL (Jika kalah uang dikembalikan 100% atau lanjut MCL minggu
                                     depan) cocok untuk yang menginginkan squad mendapat title juara MCL</strong>
@@ -266,7 +269,7 @@
             </div>
             <!-- paket push wr classic -->
             <div class="row justify-content-center mt-5">
-                <div class="accordion" id="accordionPanelsStayOpenExample">
+                <div class="accordion" id="accordionPanelsStayOpenNine">
                     <h2 class="text-center mb-4">Joki Classic UP Win Rate (100% Menang)</h2>
                     <strong>Penting: </strong>Untuk mengetahui berapa match yang
                     diperlukan untuk
@@ -679,7 +682,7 @@
                 <!-- Footer Social Icons-->
                 <div class="col-lg-4 mb-5 mb-lg-0">
                     <h4 class="mb-4">SOSIAL MEDIA</h4>
-                    <img src="assets/img/logo-ig.png" alt="Instagram" width="30"> <a
+                    <img src="assets/img/logo-ig-30px.png" alt="Instagram" width="30"> <a
                         href="https://www.instagram.com/joki.win/" target="_blank" rel="noopener"
                         style="color:white;">@joki.win</a>
                 </div>
